.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

18.1.0  2018-01-17

New Features:

  * util-security: Added `c.t.util.security.X509CrlFile` for reading
    Certificate Revocation List PEM formatted `X509CRL` files.
    ``PHAB_ID=D127700``

17.12.0  2017-12-08

API Changes:

  * util-collection: `c.t.util.SetMaker` has been removed.
    Direct usage of Guava is recommended if needed. ``PHAB_ID=D116852``

17.11.0  2017-11-15

Dependencies:

  * Guava has been removed as dependency from all modules except the
    'util-cache-guava' module. ``PHAB_ID=D117039``

New Features:

  * util-security: Added `c.t.util.security.PrivateKeyFile` for reading PKCS#8
    PEM formatted `PrivateKey` files. ``PHAB_ID=D105266``

Bug Fixes:

  * util-core: `c.t.io.BufByteWriter.fixed(size).owned()` will only represent bytes
    explicitly written instead of the full size of the backing array, `size`.
    ``PHAB_ID=D112938``

API Changes:

  * util-cache: The Guava dependency and its associated implementations have been
    moved to a new module, 'util-cache-guava'. ``PHAB_ID=D117039``

  * util-cache: `c.t.cache.EvictingCache.lazily` now takes a `FutureCache`
    instead of an implementation specific cache. ``PHAB_ID=D117039``

17.10.0  2017-10-26

Release Version Changes:
  * From now on, release versions will be based on release date in the format of
    YY.MM.x where x is a patch number. ``PHAB_ID=D101244``

New Features:

  * util-intellij: Create util-intellij project and publish IntelliJ capture
    points plugin for debugging asynchronous stack traces of code using Twitter
    Futures in Scala 2.11.11. ``PHAB_ID=D96782``

API Changes:

  * util-app: c.t.app.Flag.let and letClear are now generic in their return type.
    ``PHAB_ID=D93951``

Bug Fixes: