@@ -6,6 +6,11 @@ Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in com
 
 Unreleased
 
+New Features:
+
+* util-core: Added implicit conversion for percentage specified as "x.percent"
+  to a fractional Double in `c.t.conversions.percent`. ``PHAB_ID=D128792``
+
 18.1.0  2018-01-17
 
 New Features:
